removed debug flood + added link to status page

--- a/click.html
+++ b/click.html
@@ -17,6 +17,9 @@
           <a href='/?window=5' class='btn btn-lg btn-warning'>Open 10%</a>
           <a href='/?window=0' class='btn btn-lg btn-danger'>Close</a>
       </p>
+      </p>
+          <a href='/?window=-1' class='btn btn-lg btn-default'>Status</a>
+      <p>
     </div>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
     <script src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script>
