--- a/click.html
+++ b/click.html
@@ -32,7 +32,7 @@
       });
       var update = function() {
         $.getJSON('/?window=-1').done(function(data) {
-          var percentage = Math.round(100*(data.openess / 47));
+          var percentage = Math.round(100*(data.openness / 47));
           $('#progress').attr('style', 'width: ' + percentage + '%');
           var text = "closed";
           if (percentage > 0) {
