--- a/click.html
+++ b/click.html
@@ -39,7 +39,7 @@
           if (percentage > 0) {
             text = 'open';
           }
-          switch (data.status) {
+          switch (data.state) {
             case 1: text = 'opening'; break;
             case 2: text = 'closing'; break;
           }
